@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.github.de-gupta</groupId>
+    <parent>
+        <groupId>io.github.de-gupta</groupId>
+        <artifactId>cleanCrudParent</artifactId>
+        <version>0.1.1</version>
+    </parent>
+
     <artifactId>cleanCrud-sampleImplementation</artifactId>
     <version>0.2.2-SNAPSHOT</version>
 
@@ -11,36 +18,12 @@
     <url>https://github.com/de-gupta/cleanCrud-sampleImplementation.git</url>
 
     <properties>
-        <maven.compiler.release>25</maven.compiler.release>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
-        <spring.boot.version>3.5.12</spring.boot.version>
-
-        <cleanCrud.version>0.7.1</cleanCrud.version>
-        <aegis.version>0.1.1</aegis.version>
-
-        <springdoc.openapi.version>2.8.9</springdoc.openapi.version>
-        <jmh.version>1.37</jmh.version>
-
-        <maven.compiler.plugin.version>3.14.0</maven.compiler.plugin.version>
-        <maven.release.plugin.version>3.1.1</maven.release.plugin.version>
-        <maven.gpg.plugin.version>3.2.8</maven.gpg.plugin.version>
-        <maven.central.publishing.version>0.8.0</maven.central.publishing.version>
-        <maven.source.plugin.version>3.3.1</maven.source.plugin.version>
-        <maven.javadoc.plugin.version>3.11.2</maven.javadoc.plugin.version>
+        <argLine></argLine>
+        <cleanCrud.version>0.7.3-SNAPSHOT</cleanCrud.version>
+        <it.tag.expression>fast | medium</it.tag.expression>
+        <test.jvm.args>-Djdk.attach.allowAttachSelf=true -XX:+EnableDynamicAgentLoading</test.jvm.args>
+        <test.mode>medium</test.mode>
     </properties>
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-dependencies</artifactId>
-                <version>${spring.boot.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
 
     <dependencies>
         <dependency>
@@ -68,13 +51,11 @@
         <dependency>
             <groupId>io.github.de-gupta</groupId>
             <artifactId>aegis</artifactId>
-            <version>${aegis.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>${springdoc.openapi.version}</version>
         </dependency>
 
         <dependency>
@@ -85,13 +66,11 @@
         <dependency>
             <groupId>org.openjdk.jmh</groupId>
             <artifactId>jmh-core</artifactId>
-            <version>${jmh.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.openjdk.jmh</groupId>
             <artifactId>jmh-generator-annprocess</artifactId>
-            <version>${jmh.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -129,85 +108,51 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
-                <version>${maven.release.plugin.version}</version>
+                <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <goals>install</goals>
-                    <tagNameFormat>v@{project.version}</tagNameFormat>
+                    <argLine>${argLine} ${test.jvm.args}</argLine>
                 </configuration>
             </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-gpg-plugin</artifactId>
-                <version>${maven.gpg.plugin.version}</version>
-                <executions>
-                    <execution>
-                        <id>sign-artifacts</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>sign</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <version>${maven.source.plugin.version}</version>
-                <executions>
-                    <execution>
-                        <id>attach-sources</id>
-                        <goals>
-                            <goal>jar-no-fork</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>${maven.javadoc.plugin.version}</version>
-                <executions>
-                    <execution>
-                        <id>attach-javadocs</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.sonatype.central</groupId>
-                <artifactId>central-publishing-maven-plugin</artifactId>
-                <version>${maven.central.publishing.version}</version>
-                <extensions>true</extensions>
+                <artifactId>maven-failsafe-plugin</artifactId>
                 <configuration>
-                    <publishingServerId>central</publishingServerId>
-                    <autoPublish>true</autoPublish>
+                    <argLine>${argLine} ${test.jvm.args}</argLine>
+                    <properties>
+                        <configurationParameters>junit.jupiter.tags.include = ${it.tag.expression}</configurationParameters>
+                    </properties>
+                    <systemPropertyVariables>
+                        <testMode>${test.mode}</testMode>
+                    </systemPropertyVariables>
                 </configuration>
             </plugin>
         </plugins>
     </build>
 
-    <distributionManagement>
-        <snapshotRepository>
-            <id>central</id>
-            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
-        </snapshotRepository>
-    </distributionManagement>
-
-    <licenses>
-        <license>
-            <name>GPL-3.0 License</name>
-            <url>https://www.gnu.org/licenses/gpl-3.0.html</url>
-        </license>
-    </licenses>
-    <developers>
-        <developer>
-            <id>de-gupta</id>
-            <name>de-gupta</name>
-            <email>221553154+de-gupta@users.noreply.github.com</email>
-        </developer>
-    </developers>
+    <profiles>
+        <profile>
+            <id>fast-it</id>
+            <properties>
+                <it.tag.expression>fast</it.tag.expression>
+                <test.mode>fast</test.mode>
+            </properties>
+        </profile>
+        <profile>
+            <id>medium-it</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <it.tag.expression>fast | medium</it.tag.expression>
+                <test.mode>medium</test.mode>
+            </properties>
+        </profile>
+        <profile>
+            <id>full-it</id>
+            <properties>
+                <it.tag.expression>fast | medium | full</it.tag.expression>
+                <test.mode>full</test.mode>
+            </properties>
+        </profile>
+    </profiles>
 </project>
